--- a/ReactNativeApp/ios/ReactNativeApp/Info.plist
+++ b/ReactNativeApp/ios/ReactNativeApp/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>CFBundleDisplayName</key>
+	<key>EasyHome</key>
 	<string>ReactNativeApp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
