Allow connections (only http?)

--- a/ReactNativeApp/ios/ReactNativeApp/Info.plist
+++ b/ReactNativeApp/ios/ReactNativeApp/Info.plist
@@ -50,3 +50,13 @@
 	<false/>
 </dict>
 </plist>
+
+<!--
+	only iOS
+	TODO: Solve network request fails when calling API
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+</dict>
+-->
