--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "^3.8.0",
