--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -46,12 +46,22 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-native": "^4.1.0",
+    "husky": "^9.0.11",
     "jest": "^29.6.3",
+    "lint-staged": "^15.2.4",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   }
 }
