--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-native": "^4.1.0",
-    "husky": "^9.0.11",
+    "husky": "^4.3.8",
     "jest": "^29.6.3",
     "lint-staged": "^15.2.4",
     "prettier": "^3.2.5",
@@ -62,6 +62,10 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "npm test",
+      "git add"
+    ]
   }
 }
