--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-date-picker": "^5.0.4",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-picker-select": "^9.1.3",
