--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "react-native start",
+    "start": "react-naative start",
     "test": "jest"
   },
   "dependencies": {
@@ -23,13 +23,11 @@
     "react-native": "0.73.5",
     "react-native-date-picker": "^5.0.4",
     "react-native-dialog": "^9.3.0",
-    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
