--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "react-naative start",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-date-picker": "^5.0.4",
@@ -28,6 +30,7 @@
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
