--- a/ReactNativeApp/package.json
+++ b/ReactNativeApp/package.json
@@ -26,10 +26,13 @@
     "react-native-date-picker": "^5.0.4",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-gifted-charts": "^1.4.10",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0"
   },
